--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fazer Pedido</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
 </head>
 <body>
     <div class="root1">    
@@ -16,6 +16,7 @@
                 <li><a href="/index.html">Fazer Pedido</a></li>
                 <li><a href="/listaPedidos.html">Lista de Pedidos</a></li>
                 <li>Estoque</li>
+                <li>Registrar Móvel</li>
 
             </ul>
         </nav>
