--- a/FrontEnd/listaPedidos.html
+++ b/FrontEnd/listaPedidos.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="listaPedidos.css">
+    <link rel="stylesheet" href="/CSS/listaPedidos.css">
     <title>Lista de Pedidos</title>
     <style>
         /* Estilo personalizado para os botões */
@@ -36,6 +36,7 @@
             <li><a href="/index.html">Fazer Pedido</a></li>
             <li><a href="/listaPedidos.html">Lista de Pedidos</a></li>
             <li>Estoque</li>
+            <li>Registrar Móvel</li>
 
         </ul>
     </nav>
