--- a/FrontEnd/listaPedidos.html
+++ b/FrontEnd/listaPedidos.html
@@ -36,7 +36,7 @@
             <li><a href="/index.html">Fazer Pedido</a></li>
             <li><a href="/listaPedidos.html">Lista de Pedidos</a></li>
             <li>Estoque</li>
-            <li>Registrar Móvel</li>
+            <li><a href="/RegistrarMovel.html">Registrar Móvel</a></li>
 
         </ul>
     </nav>
