API semi integration, delete with error

--- a/FrontEnd/listaPedidos.html
+++ b/FrontEnd/listaPedidos.html
@@ -35,8 +35,8 @@
         <ul>
             <li><a href="/index.html">Fazer Pedido</a></li>
             <li><a href="/listaPedidos.html">Lista de Pedidos</a></li>
-            <li>Estoque</li>
-            <li><a href="/RegistrarMovel.html">Registrar Móvel</a></li>
+            <li><a href="/Estoque.html">Estoque</a></li>
+            <li><a href="RegistrarMoveis.html">Registrar Móveis</a></li>
 
         </ul>
     </nav>
