--- a/FrontEnd/listaPedidos.html
+++ b/FrontEnd/listaPedidos.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/listaPedidos.css">
+    <link rel="stylesheet" href="./CSS/listaPedidos.css">
     <title>Lista de Pedidos</title>
     <style>
         /* Estilo personalizado para os botões */
@@ -33,10 +33,10 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="/index.html">Fazer Pedido</a></li>
-            <li><a href="/listaPedidos.html">Lista de Pedidos</a></li>
-            <li><a href="/Estoque.html">Estoque</a></li>
-            <li><a href="RegistrarMoveis.html">Registrar Móveis</a></li>
+            <li><a href="./index.html">Fazer Pedido</a></li>
+            <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
+            <li><a href="./Estoque.html">Estoque</a></li>
+            <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
 
         </ul>
     </nav>
