--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fazer Pedido</title>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
     <div class="root1">    
@@ -13,10 +13,10 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="/index.html">Fazer Pedido</a></li>
-                <li><a href="/listaPedidos.html">Lista de Pedidos</a></li>
-                <li><a href="/Estoque.html">Estoque</a></li>
-                <li><a href="RegistrarMoveis.html">Registrar Móveis</a></li>
+                <li><a href="./index.html">Fazer Pedido</a></li>
+                <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
+                <li><a href="./Estoque.html">Estoque</a></li>
+                <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
     
             </ul>
         </nav>
