Index DB integration

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="root1">    
         <div class="Titulo">
-        <h1>Estoque</h1>
+            <h1>Estoque</h1>
         </div>
         <nav class="navbar">
             <ul>
@@ -17,27 +17,19 @@
                 <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
                 <li><a href="./Estoque.html">Estoque</a></li>
                 <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
-    
             </ul>
         </nav>
         <article>
             <aside>
                 <h2>Categorias</h2>
-
             </aside>
             <div class="itens-container">
                 <section id="itens">
-                    <ul>
-                        <li>Cadeira</li>
-                        <li>Mesa</li>
-                        <li>Biongo</li>
-                    </ul>
+                    <ul id="lista-itens"></ul>
                 </section>
             </div>
         </article>
     </div>
-
-
-    
+<script src="./JS/index.js"></script>
 </body>
 </html>
