--- a/FrontEnd/Estoque.html
+++ b/FrontEnd/Estoque.html
@@ -13,7 +13,7 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="../index.html">Fazer Pedido</a></li>
+                <li><a href="./index.html">Fazer Pedido</a></li>
                 <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
                 <li><a href="./Estoque.html">Estoque</a></li>
                 <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
