CSS update and execute pedido

--- a/FrontEnd/Estoque.html
+++ b/FrontEnd/Estoque.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="Titulo">
-        <h1>Registrar</h1>
+        <h1>Estoque</h1>
         </div>
         <nav class="navbar">
             <ul>
