--- a/FrontEnd/RegistrarMoveis.html
+++ b/FrontEnd/RegistrarMoveis.html
@@ -21,10 +21,10 @@
     <div class="form-container">
         <form id="registrarForm" onsubmit="event.preventDefault(); Post();">
             <h1>Registrar Novo Produto</h1>
-            <label for="Nome">Nome</label><br>
-            <input type="text" name="Nome" id="Nome"><br><br>
-            <label for="Quantidade">Quantidade</label><br>
-            <input type="text" name="Quantidade" id="Quantidade"><br><br>
+            <label for="Nome">Nome</label>
+            <input type="text" name="Nome" id="Nome">
+            <label for="Quantidade">Quantidade</label>
+            <input type="text" name="Quantidade" id="Quantidade">
             <button type="submit">Registrar</button>
         </form>
 
