--- a/FrontEnd/listaPedidos.html
+++ b/FrontEnd/listaPedidos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -53,12 +53,12 @@
                         <th>Ações</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr th:each="pedido : ${pedidos}">
-                        <td th:text="${pedido.data}"></td>
-                        <td th:text="${pedido.agencia}"></td>
+                <tbody id="pedidos-body">
+                    <tr>
+                        <td ></td>
+                        <td ></td>
                         <td>
-                            <a th:href="@{'/pedido/' + ${pedido.id}}" class="btn-details">Ver detalhes</a>
+                            <a href="#" class="btn-details">Ver detalhes</a>
                         </td>
                     </tr>
                 </tbody>
@@ -72,6 +72,7 @@
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
+    <script src="./JS/listaPedidos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
