--- a/FrontEnd/detalhesPedido.html
+++ b/FrontEnd/detalhesPedido.html
@@ -14,12 +14,12 @@
             <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
             <li><a href="./Estoque.html">Estoque</a></li>
             <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
+            <li><a href="">DashBoard</a></li>
         </ul>
     </nav>
     <div class="container">
         <h1 id="pedido-id">Detalhes do Pedido</h1>
         <div id="pedido-detalhes">
-            <!-- Detalhes do pedido serão preenchidos aqui -->
         </div>
         <a href="listaPedidos.html" class="btn btn-primary btn-voltar">Voltar</a>
         <button id="executarPedido" class="btn btn-success">Executar Pedido</button>
