--- a/FrontEnd/indexC.html
+++ b/FrontEnd/indexC.html
@@ -13,10 +13,8 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="./index.html">Fazer Pedido</a></li>
-                <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
-                <li><a href="./Estoque.html">Estoque</a></li>
-                <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
+                <li><a href="./indexC.html">Fazer Pedido</a></li>
+                <li><a href="./EstoqueC.html">Estoque</a></li>
                 <li><a href="">DashBoard</a></li>
                 
             </ul>
