--- a/FrontEnd/listaPedidos.html
+++ b/FrontEnd/listaPedidos.html
@@ -37,7 +37,8 @@
             <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
             <li><a href="./Estoque.html">Estoque</a></li>
             <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
-
+            <li><a href="">DashBoard</a></li>
+            
         </ul>
     </nav>
 
@@ -45,7 +46,6 @@
     <main class="container my-5">
         <div class="table-responsive">
             <table class="table table-striped table-hover">
-                <a href="/download-excel" class="btn btn-success mb-3">Baixar Excel</a>
                 <thead class="table-dark">
                     <tr>
                         <th>Data</th>
