CSS color update

--- a/FrontEnd/EstoqueC.html
+++ b/FrontEnd/EstoqueC.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="./indexC.html">Fazer Pedido</a></li>
                 <li><a href="./EstoqueC.html">Estoque</a></li>
-                <li><a href="">DashBoard</a></li>
+                <li><a href="https://app.powerbi.com/view?r=eyJrIjoiZDcyNzQ1NWYtMzFjMi00MjMxLTlkZDEtZDQwYTQ5NWRhYjYzIiwidCI6ImIyZDMwOWMxLThhMDEtNGFlZi1hYjM4LWE2ZmRmMWNlMmFmYSJ9">DashBoard</a></li>
                 
             </ul>
         </nav>
