--- a/FrontEnd/RegistrarMoveis.html
+++ b/FrontEnd/RegistrarMoveis.html
@@ -14,7 +14,7 @@
             <li><a href="./listaPedidos.html">Lista de Pedidos</a></li>
             <li><a href="./Estoque.html">Estoque</a></li>
             <li><a href="./RegistrarMoveis.html">Registrar Móveis</a></li>
-            <li><a href="">DashBoard</a></li>
+            <li><a href="https://app.powerbi.com/view?r=eyJrIjoiZDcyNzQ1NWYtMzFjMi00MjMxLTlkZDEtZDQwYTQ5NWRhYjYzIiwidCI6ImIyZDMwOWMxLThhMDEtNGFlZi1hYjM4LWE2ZmRmMWNlMmFmYSJ9">DashBoard</a></li>
             
         </ul>
     </nav>
